# Obisidan-Record

./: 2025-02-26.md  Detection of Wildlife Animals using Deep LearningApproaches A Systematic Review 1.pptx
.makemd/: fileCache.mdc  superstate.mdc
.obsidian/: appearance.json  community-plugins.json  hotkeys.json  workspace.json
.obsidian/plugins/calendar/: data.json
.obsidian/plugins/make-md/: Spaces.mdb  data.json
.obsidian/plugins/obsidian-git/: data.json  git_credentials_input  git_credentials_input.response
.obsidian/plugins/obsidian-tasks-plugin/: data.json
.space/: context.mdb  waypoints.json
.trash/: 2025-03-06 (신입생 MT 공지 추가).md
2024/: 2024.md
2025/4학년1학기/컴퓨터알고리즘/: 2025-03-04 (OT).md
2025/개인공부/: 개인공부.md
2025/멘토멘티/: 2025-03-01.md  동아리.md  장학금 관련(2023 요람).md  장학금 관련(에타참고).md
2025/멘토멘티/Doc/: 2025-03-01 (3회차 멘토멘티 비대면 회의).md  2025_멘토링 결과보고양식_멘토용.hwp
2025/멘토멘티/ppt/: 1회차 .pptx  4회차.pptx
2025/학생회/2월/: 2025-02-24 ( 입학식 + 신입생 MT).md
2025/학생회/3월/: 2025-03-03 ().md  2025-03-03 (신입생 MT 공지).md  2025-03-10 (.md  2025-03-10 (개강총회 + 학생회모집).md
2025년/멘토멘티/: 2025-02-24 (1회차 멘토멘티 비대면 회의).md  2025-02-24.md  2025-02-25 (2회차 멘토멘티 비대면 회의).md  동아리.md
3주차/개인공부/: 2025-01-16(따라하며 배우는 노드, 리액트 시리즈 - 기본 강의- 인프런).md
Code/DashBoard/: Readme.md
Code/Pytorch-Tutorial/: Fashion-Mnist.ipynb  model.pth
Code/V3/: README.md
개인공부/: 2025-01-16(따라하며 배우는 노드, 리액트 시리즈 - 기본 강의- 인프런).md
학부연구생/Code/Check-power/: CMakeLists.txt
학부연구생/Code/Check-power/src/: button_check.cpp
학생회/2월/: 2025 과학기술대학 신입생 mt 재학생 명단.docx  2025-02-19 (입학식 + OT 비대면 회의).md
(+233 files in other folders)
